--- a/pages/About/how-to-write-documentation-pages.html
+++ b/pages/About/how-to-write-documentation-pages.html
@@ -1,73 +1,148 @@
 <psk-page title="How to Write a page on this site">
-  <psk-toc title= "In this section"></psk-toc>
-  <psk-description>
-    This  page is short guide for  PrivateSky developers, technical writers, external parteners and intribut contributors
-  </psk-description>
-  
-  <psk-chapter title="Each page is a simple html writen with a semantic markup defined with web components ">
 
-  </psk-chapter>
+	<psk-toc title="In this section"></psk-toc>
 
+	<psk-description title="Summary">
+		<p>This page is short guide for PrivateSky developers, technical writers, external parteners and intribut
+			contributors. The guide is intending to present a brief introduction in how to use the developed web
+			components.</p>
+		<p>Each page is a simple html writen with a semantic markup defined with web components</p>
+	</psk-description>
 
-  <psk-chapter title="Change the menu in app-config.json">
+	<psk-chapter title="About web-components">
+		<p>Web Components are a set of features that provide a standard component model for the Web allowing for
+			encapsulation and interoperability of individual HTML elements.</p>
+		<p>Primary technologies used to create them include:</p>
+		<ul class="list-group">
+			<li class="list-group-item">Custom Elements – APIs to define new HTML elements</li>
+			<li class="list-group-item">Shadow DOM – Encapsulated DOM and styling, with composition</li>
+			<li class="list-group-item">HTML Templates, an HTML fragment is not rendered, but stored until it is
+				instantiated via JavaScript</li>
+		</ul>
+		<footer class="blockquote-footer">Source:<cite title="Source Title">Wikipedia</cite></footer>
 
-  </psk-chapter>
+		<p>You can use this starter app in order to build your own app using <b>Private Sky Custom Web Components</b>.
+		</p>
+		<p>You can checkout this app and private-sky webcomponents from GitHub.</p>
+		<p>
+			<psk-button href="https://github.com/PrivateSky/cardinal" target="_blank">Checkout this app</psk-button>
+			<psk-button href="https://github.com/PrivateSky/pskwebcomponents" target="_blank">Checkout psk-webcomponents
+			</psk-button>
+		</p>
+	</psk-chapter>
 
-  <psk-chapter title="Available tags">
-    <psk-chapter title="Icons">
-      <a href="https://fontawesome.com/icons?d=gallery&m=free">Check this page to get more beautiful icons</a>
-    </psk-chapter>
+	<psk-chapter title="Create a new page">
+		<p>In order to create a new page, first, we need to understand how works the file named
+			<code>app-config.json</code>. Inside this file, there is a configuration that tells the web-site what pages
+			can be displayed.</p>
+		<p>One of the key names inside the file is "pages". Everything defined inside this key will be displayed in the
+			application menu, so it can be opened. The following example will also show how this page is registered.</p>
+		<psk-code language="json">
+			"pages": [{
+				"name": "Home",
+				"path": "/home",
+				"icon": "fa-home",
+				"pageSrc": "index.html"
+			},
+			{
+				"name": "About",
+				"path": "/About",
+				"icon": "fa-cog",
+				// The "children" property is defining a sub-tree of pages for the About section.
+				"children": [{
+						"name": "About"
+					},
+					{
+						"name": "How to create a new site with Cardinal"
+					},
+					{
+						// As we can see, some pages have the key "path", some do not.
+						// Also, we can see that "pageSrc" attribute is not used for this page. If you use this attribute, you can name theHTML file as you wish.
+						// In this way, the HTML file will be named how-to-write-documentation-pages.html
+						"name": "How to write documentation pages"
+					}
+				]
+			}]
+		</psk-code>
+		<p>Every HTML page is written inside "pages" directory followed by the sub-tree defined in "app-config.json". In
+			the above code sample, we have The section About and this page is inside the sub-tree of the section. In
+			this way, the folder structure is the following one: <code>pages/about/how-to-write-documentation-pages.html</code>, so
+			the components will be able to load the page correctly.</p>
+	</psk-chapter>
 
-    <psk-chapter title="psk-page">
-      Starts a page, this tag is required
-    </psk-chapter>
+	<psk-chapter title="Available tags">
+		<p>There are three categories of web components so far: <psk-link page="web-components">main web components</psk-link>,
+			<psk-link page="psk-wiki">documentation components</psk-link> and <psk-link page="forms">form components</psk-link>.
+		</p>
 
-    <psk-chapter title="psk-chapter">
-      Introduce  a chapter or sub-chapter
-    </psk-chapter>
-
-    <psk-chapter title="psk-image" >
-      Display an image
-    </psk-chapter>
-
-    <psk-chapter title="psk-toc">
-        Automatically creates a Table of Content for current page
-    </psk-chapter>
-
-    <psk-chapter title="psk-card">
-        Display a card
-    </psk-chapter>
-
-  </psk-chapter>
-
-  <psk-chapter title="Other html5 tags">
-    bold, link,
-  </psk-chapter>
-
-  <psk-chapter title="Available icons in font">
-    What icons can be used in menus:
-  </psk-chapter>
-
-  <psk-chapter title="About web-components">
-    
-    <p>Web Components are a set of features that provide a standard component model for the Web allowing for encapsulation and interoperability of individual HTML elements.</p>
-    <p>Primary technologies used to create them include:</p>
-    <ul class="list-group">
-      <li class="list-group-item">Custom Elements – APIs to define new HTML elements</li>
-      <li class="list-group-item">Shadow DOM – Encapsulated DOM and styling, with composition</li>
-      <li class="list-group-item">HTML Templates, an HTML fragment is not rendered, but stored until it is instantiated via JavaScript</li>
-    </ul>
-    <footer class="blockquote-footer">Source:<cite title="Source Title">Wikipedia</cite></footer>
-  
-    <p>You can use this starter app in order to build your own app using <b>Private Sky Custom Web Components</b>.</p>
-    <p>You can checkout this app and private-sky webcomponents from GitHub.</p>
-    <p>
-      <psk-button  href="https://github.com/PrivateSky/cardinal" target="_blank">Checkout this app</psk-button>
-      <psk-button  href="https://github.com/PrivateSky/pskwebcomponents" target="_blank">Checkout psk-webcomponents</psk-button>
-    </p>
-
-  </psk-chapter>
-
-
+		<psk-chapter title="Web Components">
+			<p>Every component can be used as long as it respects the recommendations of usage.</p>
+			<p>Check out each component documentation and examples to make an idea of how to use it.</p>
+			<psk-list>
+				<psk-link page="web-components/app-menu">App Menu</psk-link>
+				<psk-link page="web-components/app-router">App Router</psk-link>
+				<psk-link page="web-components/attachments-list">Attachments List</psk-link>
+				<psk-link page="web-components/container">Container</psk-link>
+				<psk-link page="web-components/feedback-list">Feedback List</psk-link>
+				<psk-link page="web-components/files-chooser">Files Chooser</psk-link>
+				<psk-link page="web-components/floating-menu">Floating Menu</psk-link>
+				<psk-link page="web-components/grid">Grid</psk-link>
+				<psk-link page="web-components/idon">Icon</psk-link>
+				<psk-link page="web-components/modal">Modal</psk-link>
+				<psk-link page="web-components/page-not-found">Page not found</psk-link>
+				<psk-link page="web-components/pin-popup">Pin popup</psk-link>
+				<psk-link page="web-components/psk-button">Button</psk-link>
+				<psk-link page="web-components/slideshow">Slideshow</psk-link>
+				<psk-link page="web-components/tolbar">Toolbar</psk-link>
+				<psk-link page="web-components/ui-loader">UI Loader</psk-link>
+				<psk-link page="web-components/user-profile">User Profile</psk-link>
+				<psk-link page="web-components/wizard">Wizard</psk-link>
+			</psk-list>
+		</psk-chapter>
+		
+		<psk-chapter title="Form Components">
+			<p>The form components are ment to be used when you are creating a form, but they can also be used inside other pages
+				with the correct combination. E.g.: You can add somewhere in a page a psk-text-input to filter the information from
+				a table.</p>
+			<p>Check out each component documentation and examples to make an idea of how to use it.</p>
+			<p>Also, check the documentation for <psk-link page='forms/using-forms'>How to use Forms</psk-link> in order to properly
+				combine the components and to handle the user input informations.</p>
+			<psk-list>
+				<psk-link page='forms/psk-checkbox'>PSK checkbox</psk-link>
+				<psk-link page='forms/psk-date-input'>PSK date input</psk-link>
+				<psk-link page='forms/psk-email-input'>PSK email input</psk-link>
+				<psk-link page='forms/psk-for-each'>PSK for each</psk-link>
+				<psk-link page='forms/psk-fom-row'>PSK form row</psk-link>
+				<psk-link page='forms/psk-form'>PSK form</psk-link>
+				<psk-link page='forms/psk-input'>PSK input</psk-link>
+				<psk-link page='forms/psk-label'>PSK label</psk-link>
+				<psk-link page='forms/psk-number-input'>PSK number input</psk-link>
+				<psk-link page='forms/psk-password-input'>PSK password input</psk-link>
+				<psk-link page='forms/psk-radio'>PSK radio</psk-link>
+				<psk-link page='forms/psk-radio-group'>PSK radio group</psk-link>
+				<psk-link page='forms/psk-select'>PSK select</psk-link>
+				<psk-link page='forms/psk-text-input'>PSK text input</psk-link>
+			</psk-list>
+		</psk-chapter>
+		
+		<psk-chapter title="Documentation Components">
+			<p>The documentation componens can be found within section PSK Wiki. They are all used in writting these pages.</p>
+			<p>Check out each component documentation and examples to make an idea of how to use it.</p>
+			<psk-list>
+				<psk-link page='psk-wiki/psk-card'>PSK card</psk-link>
+				<psk-link page='psk-wiki/psk-chapter'>PSK chapter</psk-link>
+				<psk-link page='psk-wiki/psk-code'>PSK code</psk-link>
+				<psk-link page='psk-wiki/psk-copy-to-clipboard'>PSK copy to clipboard</psk-link>
+				<psk-link page='psk-wiki/psk-description'>PSK description</psk-link>
+				<psk-link page='psk-wiki/psk-example'>PSK example</psk-link>
+				<psk-link page='psk-wiki/psk-img'>PSK img</psk-link>
+				<psk-link page='psk-wiki/psk-link'>PSK link</psk-link>
+				<psk-link page='psk-wiki/psk-list'>PSK list</psk-link>
+				<psk-link page='psk-wiki/psk-page'>PSK page</psk-link> - This component is the root of every page, so it is mandatory.
+				<psk-link page='psk-wiki/psk-table'>PSK table</psk-link>
+				<psk-link page='psk-wiki/psk-toc'>PSK toc</psk-link>
+			</psk-list>
+		</psk-chapter>
+	</psk-chapter>
 
 </psk-page>
