--- a/pages/About/how-to-create-a-new-site-with-cardinal.html
+++ b/pages/About/how-to-create-a-new-site-with-cardinal.html
@@ -1,5 +1,5 @@
 <psk-page title="How to create a new site using Cardinal.Js">
-	<psk-toc title="Table of Contents"></psk-toc>
+	<psk-toc title="In this section"></psk-toc>
 
 	<psk-dscription title="Summary">
 		<p>On this page can be found all the information about how to creat a new skeleton site using Cardinal.Js
@@ -36,7 +36,7 @@ $ ~/path/to/cardinal-updater> npm install -g
 
 	<psk-chapter title="Instalation">
 		<psk-card>
-			<p>Display the help section: command <code>cardinal -h</code> or <code>cardinal --help</code> or <code>cardinal help</code>.
+			<p>Display the help section: command <code>cardinal -h</code> or <code>cardinal --help</code> or <code>cardinal help</code>.</p>
 			<psk-code language="shell-session">
 $ cardinal -h
 
