update to match new psk-for-each usage

--- a/pages/About/how-to-write-documentation-pages.html
+++ b/pages/About/how-to-write-documentation-pages.html
@@ -38,7 +38,7 @@
 		<p>One of the key names inside the file is "pages". Everything defined inside this key will be displayed in the
 			application menu, so it can be opened. The following example will also show how this page is registered.</p>
 		<psk-code language="json">
-"pages": [{
+{"pages": [{
 	"name": "Home",
 	"path": "/home",
 	"icon": "fa-home",
@@ -62,7 +62,7 @@
 			"name": "How to write documentation pages"
 		}
 	]
-}]
+}]}
 		</psk-code>
 		<p>Every HTML page is written inside "pages" directory followed by the sub-tree defined in "app-config.json". In
 			the above code sample, we have The section About and this page is inside the sub-tree of the section. In
