--- a/pages/Cardinal/models.html
+++ b/pages/Cardinal/models.html
@@ -7,6 +7,7 @@
             <psk-link page='forms/psk-form'>psk-form</psk-link> or a set of components wrapped inside a
             <psk-link page='web-componentnts/container'>psk-container</psk-link>.</p>
         <psk-chapter title="What is a model?">
+			<p>Binding, at it's very basic, is the process where one thing is assinged to another thing. Here, we want to assign some attributes from a model to a component.</p>
             <p>A model is data used by a program. This may be a database, file, or a simple object.</p>
             <p>For now, each model can be defined inside a controller as in the examples found at the page
                 <psk-link page='forms/using-forms'>Using Forms</psk-link>.</p>
@@ -32,48 +33,48 @@
         </p>
         <psk-code>
             <psk-label label="@customLabel">
-                <!-- customLabel must be defined inside the controller, so it can take the value -->
+                <!-- customLabel must be defined, so it can take the value -->
             </psk-label>
 
             <psk-label label="@languages.en.customLabel">
                 <!-- Also, can use a chain to get the value -->
-                <!-- The languages object will look something like this: -->
-                <!-- 
-				{
-					languages: {
-						en: {
-							customLabel: "Some Label to be displayed",
-							// Other attributes
-						},
+            </psk-label>
+        </psk-code>
+		<psk-code language="javascript">
+		    // The languages object will look something like this:
+			{
+				languages: {
+					en: {
+						customLabel: "Some Label to be displayed",
 						// Other attributes
 					},
 					// Other attributes
-				}
-				 -->
-            </psk-label>
-        </psk-code>
+				},
+				// Other attributes
+			}
+		</psk-code>
         <p>Using "view-model" attribute to assign more attributes.
             <psk-link page='forms/psk-input'>psk-input</psk-link>
         </p>
         <psk-code>
             <psk-input view-model="customInput">
-                <!-- customInput must be defined inside the controller, so it can take the value -->
+                <!-- customInput must be defined, so it can take the value -->
                 <!-- All the attributes found inside customInput will be applyed to psk-input component -->
-
-                <!-- The languages object will look something like this: -->
-                <!-- 
-				{
-					customInput: {
-						label: "Some label to display",
-						placeholder: "Placeholder text",
-						required: true,
-						// And other attributes if needed
-					},
-					// Other attributes
-				}
-				 -->
             </psk-input>
         </psk-code>
+		<psk-code language="javascript">
+		    // The object will look something like this:
+			{
+				customInput: {
+					label: "Some label to display",
+					placeholder: "Placeholder text",
+					required: true,
+					// And other attributes if needed
+				},
+				// Other attributes
+			}
+		</psk-code>
+		
         <p>Using view-model-ATTRIBUTE_NAME to assign a value to ATTRIBUTE_NAME, where ATTRIBUTE_NAME can be any attribute of a component. Similar to first method.
             <psk-link page='forms/psk-label'>psk-label</psk-link>
         </p>
@@ -90,5 +91,11 @@
             <psk-link page='forms/psk-for-each'>psk-for-each</psk-link>
         </p>
         </psk-list>
+    </psk-chapter>
+
+    <psk-chapter title="Two-way binding">
+        <p>Two-way binding means that any data-related changes affecting the model are immediately propagated to the matching view(s), and that any changes made in the view(s) (say, by the user) are immediately reflected in the underlying model. When app data changes, so does the UI, and conversely.</p>
+        <p>In time, all the components will be able to have bindings, right now, all the form components have implmented two-way binding (explained in <psk-link page='forms/using-forms'>Using Forms</psk-link> page).</p>
+        <p>There is not much to do here, you just need to make sure that the components are binded and the two-way is handled by the components.</p>
     </psk-chapter>
 </psk-page>
