--- a/pages/About/how-to-create-a-new-site-with-cardinal.html
+++ b/pages/About/how-to-create-a-new-site-with-cardinal.html
@@ -62,8 +62,8 @@ help [cmd]         display help for [cmd]
 $ cardinal init myCardinalApp --menu=top
 			</psk-code>
 			<p>By running this command a directory named "myCardinalApp" was created. </p>
-			<p>Inside it there were added the builds from <a href="https://github.com/PrivateSky/pks-release">PrivateSky-Release</a>, which includes the source files for BlockChain, CSB and Two-way binding and also the build which includes all the web-components developed within <a href="https://github.com/PrivateSky/pskwebcomponents">pskwebcomponents</a> module.</p>
-			<p>The build is made within <a href="https://github.com/PrivateSky/pks-release">Cardinal</a> module and the built source file are brought to the skeleton.</p>
+			<p>Inside it there were added the builds from <a href="https://github.com/PrivateSky/psk-release">PrivateSky-Release</a>, which includes the source files for BlockChain, CSB and Two-way binding and also the build which includes all the web-components developed within <a href="https://github.com/PrivateSky/pskwebcomponents">pskwebcomponents</a> module.</p>
+			<p>The build is made within <a href="https://github.com/PrivateSky/cardinal">Cardinal</a> module and the built source file are brought to the skeleton.</p>
 			<p><b>Node:</b> <i>You can run also <code>cardinal init</code> with no problems, the differences are that the default values for <code>menu</code> and <code>dir</code> will be taken as parameters for the skeleton creation process.</i></p>
 		</psk-card>
 	</psk-chapter>
