--- a/pages/forms/using-forms.html
+++ b/pages/forms/using-forms.html
@@ -145,7 +145,7 @@ export default class TestFormChildrenController extends DefaultFormController {
         <p>The bind is made only if the value of the attribute <code>view-model</code> is an existing <code>chain</code> inside the model. The <code>chain</code> is the sequence to the JavaScript object that will be binded to the component. If the <code>chain</code> is not a valid one, then the component will be rendered blank, without any properties.</p>
         
         <psk-chapter title="Two-way binding">
-            <p>Two-way binding means that any data-related changes affecting the model are immediately propagated to the matching view(s), and that any changes made in the view(s) (say, by the user) are immediately reflected in the underlying model. When app data changes, so does the UI, and conversely.</p>
+            <p>Two-way binding in programming, as minimal definition, is the process where any change made in the view is reflected into the model and any change in the model is reflected into the view.</p>
             <p>All the form components of type inputs, radio, checkbox and select have two-way binding implemented, which means that whenever the user is changing the content of an input, the model and view are automatically updated. Also it is applied when the user checks a checkbox or a radio and when he selects something from a select component.</p>
             <p>There is not much to do here, you just need to make sure that the components are binded and the two-way is handled by the components.</p>
         </psk-chapter>
