--- a/pages/Cardinal/models.html
+++ b/pages/Cardinal/models.html
@@ -94,7 +94,7 @@
     </psk-chapter>
 
     <psk-chapter title="Two-way binding">
-        <p>Two-way binding means that any data-related changes affecting the model are immediately propagated to the matching view(s), and that any changes made in the view(s) (say, by the user) are immediately reflected in the underlying model. When app data changes, so does the UI, and conversely.</p>
+        <p>Two-way binding in programming, as minimal definition, is the process where any change made in the view is reflected into the model and any change in the model is reflected into the view.</p>
         <p>In time, all the components will be able to have bindings, right now, all the form components have implmented two-way binding (explained in <psk-link page='forms/using-forms'>Using Forms</psk-link> page).</p>
         <p>There is not much to do here, you just need to make sure that the components are binded and the two-way is handled by the components.</p>
     </psk-chapter>
