--- a/pages/PrivateSky/build.html
+++ b/pages/PrivateSky/build.html
@@ -2,7 +2,7 @@
     <psk-description>
         PrivateSky Building Process is done automatically before starting to running PrivateSky, however, not always the default configuration is desired. Furthermore, for releasing PrivateSky a production build needs to be created instead of the default debug build.
     </psk-description>
-    <psk-toc title="PrivateSky Build Process">
+    <psk-toc title="In this section">
     </psk-toc>
     <psk-chapter title="How to build">
         Building PrivateSky project suppose to run an build process based on using <a href="http://browserify.org/">Browserify</a> over some specific targets and deps configuration. PrivateSky main build configuration can be found be accessing file <b>builds/build.json</b>
