--- a/pages/PrivateSky/dependencies.html
+++ b/pages/PrivateSky/dependencies.html
@@ -2,7 +2,7 @@
     <psk-description>
         PrivateSky project tries to avoid using NPM packages and NPM in general (or any other build system) for the dependencies of the project's core and that is why we have a custom script that helps with the deps.
     </psk-description>
-    <psk-toc title="PrivateSky Dependencies">
+    <psk-toc title="In this section">
     </psk-toc>
     <psk-chapter title="Dependencies Management">
         PrivateSky project has a dedicated script that handles dependencies management (install, update etc.)<br>
