--- a/pages/PrivateSky/installation.html
+++ b/pages/PrivateSky/installation.html
@@ -1,5 +1,5 @@
 <psk-page title="PrivateSky Installation">
-  <psk-toc title="PrivateSky Installation">
+  <psk-toc title="In this section">
   </psk-toc>
   <psk-chapter title="Prerequisites">
     <ol>
