--- a/pages/forms/psk-radio.html
+++ b/pages/forms/psk-radio.html
@@ -4,7 +4,7 @@
     </psk-toc>
 
     <psk-description title="Definition and usage">
-        <p>Psk-Radio component is designed to be used inside a Psk-Radio-Grou component because in the essence, only one radio can be selected inside a group.</p>
+        <p>Psk-Radio component is designed to be used inside a <b>psk-radio-group</b> component because in the essence, only one radio can be selected inside a group.</p>
         <p>If you want to be able to select multiple options from a list, you can use
             <psk-link page="forms/psk-checkbox">Psk-Checkboxes</psk-link> or
             <psk-link page="forms/psk-select">Psk-Select</psk-link>
