--- a/pages/forms/psk-for-each.html
+++ b/pages/forms/psk-for-each.html
@@ -6,7 +6,7 @@
     <psk-description>
         <p>This component is mainly used to render multiple form sections or components based on a template and a model.</p>
         <p>The model is declared in the form controller and this will be responsible for two-way binding. The model should be written as a JavaScript array (<a href="#model-example">Model Example</a>). </p>
-        <p>The template is written inside the component using HTML tag <strong><i>template</i></strong>. Everything written inside this, will be treated as a template for the model.</p>
+        <p>The template is written between start and end tag of the component. Everything written inside this, will be treated as a template for the model.</p>
         <p>So, for each item in the model, an instance of the template will be created and it will be filled with the information from the model. A written example can be found below: <a href="#template-example">Template Example</a></p>
     </psk-description>
 
