small update on installation page

--- a/pages/PrivateSky/installation.html
+++ b/pages/PrivateSky/installation.html
@@ -11,6 +11,7 @@
           <psk-code language="bash">
             npm install --global --production windows-build-tools
           </psk-code>
+          Depending on Windows version may be required to run the above command with <b>--vs2015</b> argument. For other args plese check <a href="https://www.npmjs.com/package/windows-build-tools" target="_blank">Windows Build Tools npm page</a>
         </psk-card>
         <psk-card title="To install C/C++ toolchain on CentOS">
           <psk-code language="bash">
