small text correction

--- a/pages/EDFS/ssapps.html
+++ b/pages/EDFS/ssapps.html
@@ -9,13 +9,6 @@
 
     <psk-img src="/assets/images/newlook/seq.png"></psk-img>
 
-    <p align="justify">WeldGalaxy DLT allows the creation of SSApps that support:</p>
-    <ul>
-    	<li>cooperative work of multiple users (agents) in the same instance of a distributed application</li>
-    	<li>keeping the typical features of blockchain-based systems</li>
-    	<li>limiting access to data and resulting metadata from executing smart contracts</li>
-    </ul>
-
     <p align="justify">A PrivateSky based mobile application can be created as a progressive web application running the same code as Self Sovereign Applications running inside of a  desktop browser.</p>
 
   </psk-chapter>
@@ -74,7 +67,7 @@
   	<p align="justify">As a practice, but technically not limited to this, the middleware and SSApps service workers can register three types of handlers:</p>
   	<ul>
   		<li>handlers for files, when the app is requiring resources for its running. (e.g. html templates, CSS, JavaScript libraries)</li>
-  		<li>handlers for PrivateSky logic, when the app is performing WeldGalaxy DLT actions. (e.g. fetching blockchain for key changes)</li>
+  		<li>handlers for PrivateSky logic available to be used on the app (e.g. fetching blockchain for key changes)</li>
   		<li>handlers for parent updates through an observer pattern using <i>postMessage</i> WebApi.</li>
 
   </psk-chapter>
