--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
 <body>
     <psk-app-root controller="DefaultApplicationController"></psk-app-root>
 
+    <script src="/scripts/browserSupport.js"></script>
+
     <script src="/scripts/privatesky/webshims.js"></script>
     <script src="/scripts/privatesky/bindableModel.js"></script>
-    <script>
-        //temporary fix
-        $$.log = $$.err = console.log;
-    </script>
 
     <script type="module" src="/cardinal/cardinal.esm.js"></script>
     <script nomodule src="/cardinal.js"></script>
