fix sitemap build

--- a/pages/web-components/app-root.html
+++ b/pages/web-components/app-root.html
@@ -55,7 +55,7 @@
 
     <psk-chapter title="Code Example">
         <psk-description>
-            In the end, your <code><i>index.html</i></code> file should look like the following code example.
+            In the end, the <code><i>index.html</i></code> file should look like the following code example.
         </psk-description>
         <psk-code language="markup">
             &lt;!DOCTYPE html&gt;
